--- a/currency-rates.cabal
+++ b/currency-rates.cabal
@@ -48,6 +48,7 @@ executable chart
   hs-source-dirs:   app
   default-language: Haskell2010
   build-depends:
+    Chart-diagrams ^>=1.9.5.1,
     http-client ^>=0.7.19,
     vector ^>=0.13.2.0,
     base >=4.17 && <4.18,
